# wutang13_EN605.617.FA

./: README.md
module0/: helloworld
module13/: simple.cl
project/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  Panorama  Panorama.cpp  README.md  cmake_install.cmake  init_env.sh  results.txt  results2.txt  test.sh
project/opencv_changes/: blenders.cpp  build_opencv.sh  cuda.hpp  exposure_compensate.cpp  exposure_compensate.hpp  perf_stitch.cpp  stitcher.cpp  stitching.hpp  warpers_inl.hpp
project/opencv_changes/modules/core/include/opencv2/core/: cuda.hpp
project/opencv_changes/modules/features2d/: CMakeLists.txt
project/opencv_changes/modules/features2d/include/opencv2/: features2d.hpp
project/opencv_changes/modules/features2d/src/: orb.cpp
project/opencv_changes/modules/stitching/include/opencv2/: stitching.hpp
project/opencv_changes/modules/stitching/include/opencv2/stitching/detail/: exposure_compensate.hpp
project/opencv_changes/modules/stitching/perf/: perf_stich.cpp
project/opencv_changes/modules/stitching/src/: exposure_compensate.cpp  stitcher.cpp
project/opencv_contrib_changes/: bitwise_mat.cu  cmp_scalar.cu  cudaarithm.hpp  element_operations.cpp  mul_mat.cu
project/opencv_contrib_changes/modules/cudaarithm/include/opencv2/: cudaarithm.hpp
project/opencv_contrib_changes/modules/cudaarithm/src/: element_operations.cpp
project/opencv_contrib_changes/modules/cudaarithm/src/cuda/: mul_mat.cu
