cmake_minimum_required(VERSION 2.8)
project( Panorama )
find_package( OpenCV REQUIRED )
find_package(CUDA REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories(${CUDA_INCLUDE_DIRS})
add_executable( Panorama Panorama.cpp )
target_link_libraries( Panorama ${OpenCV_LIBS} ${CUDA_INCLUDE_DIRS})